--- a/dataland-frontend/src/assets/scss/components/toolbar.scss
+++ b/dataland-frontend/src/assets/scss/components/toolbar.scss
@@ -2,13 +2,14 @@
 
 .dataland-toolbar {
   z-index: 1000;
+  background-color: variables.$white;
 
-  &.fixed {
-    top: 72px;
+  &.sticky {
+    top: 4rem;
     border-bottom: 1px solid variables.$gray-light;
 
     .d-search-filters-panel {
-      padding: 0 9px 0 0px;
+      padding: 0 9px 0 0;
     }
   }
 }
