--- a/dataland-frontend/src/assets/scss/components/buttons.scss
+++ b/dataland-frontend/src/assets/scss/components/buttons.scss
@@ -3,7 +3,9 @@
 @use '../units';
 @use '../variables';
 
-.p-button, .primary-button, .tertiary-button {
+.p-button,
+.primary-button,
+.tertiary-button {
   white-space: nowrap;
   cursor: pointer;
   font-weight: units.$button-fw;
