--- a/dataland-frontend/src/assets/scss/components/datatable.scss
+++ b/dataland-frontend/src/assets/scss/components/datatable.scss
@@ -209,3 +209,26 @@
     padding-left: 1rem;
   }
 }
+
+.p-column-filter-overlay {
+  background: #ffffff;
+  border: 1px solid rgb(226, 232, 240);
+  border-radius: 0.5rem;
+  box-shadow:
+    rgba(0, 0, 0, 0.1) 0 4px 6px -1px,
+    rgba(0, 0, 0, 0.1) 0 2px 4px -2px;
+  min-width: 12.5rem;
+  padding: 1rem;
+  display: grid;
+  gap: 1rem;
+
+  .p-column-filter-buttonbar {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
+  }
+
+  button {
+    margin: 0;
+  }
+}
