Add justify-content: center to button classes.

--- a/dataland-frontend/src/assets/scss/components/buttons.scss
+++ b/dataland-frontend/src/assets/scss/components/buttons.scss
@@ -12,6 +12,7 @@
   text-decoration: none;
   min-width: 10em;
   width: fit-content;
+  justify-content: center;
   display: inline-flex;
   align-items: center;
   vertical-align: bottom;
