Move Calendar to DatePicker

--- a/dataland-frontend/src/assets/scss/components/form.scss
+++ b/dataland-frontend/src/assets/scss/components/form.scss
@@ -665,7 +665,7 @@ input[type='radio'] {
   p {
     margin: 0.25rem;
   }
-  .p-calendar {
+  .p-datepicker {
     width: 100%;
     .p-button {
       margin: 0;
