--- a/dataland-frontend/src/assets/scss/components/tabs.scss
+++ b/dataland-frontend/src/assets/scss/components/tabs.scss
@@ -1,48 +1,47 @@
 @use '../colors';
 @use '../variables';
 
-.p-tabview {
+:root {
+  --p-tabs-tablist-border-width: 0;
+  --p-tabs-tab-hover-border-color: variables.$gray;
+  --p-tabs-tab-hover-color: variables.$gray;
+}
+
+.p-tabs {
   padding: 0;
-  .p-tabview-nav {
+  margin: 0;
+}
+
+.p-tablist, .p-tablist-content, .p-tablist-tab-list {
+  background: variables.$white;
+  border: 0;
+  padding: 0;
+  margin :0;
+
+  .p-tab {
+    border: 0 solid transparent;
+    border-bottom: 2px solid variables.$white;
     background: variables.$white;
-    li {
-      margin-right: 0;
-      .p-tabview-nav-link {
-        border: solid;
-        border-width: 0 0 2px 0;
-        border-color: transparent transparent variables.$white transparent;
-        background: variables.$white;
-        color: variables.$gray;
-        padding: 1.25rem 0;
-        margin: 0 1.25rem;
-        font-weight: 700;
-        transition: box-shadow 0.2s;
-      }
-      &:not(.p-highlight):not(.p-disabled):hover .p-tabview-nav-link {
-        background: variables.$white;
-        border-color: variables.$gray-light;
-        color: variables.$gray;
-      }
-      &.p-highlight .p-tabview-nav-link {
-        background: variables.$white;
-        border-color: colors.$main-color;
-        color: colors.$main-color;
-      }
+    color: variables.$gray;
+    padding: 1.25rem 0;
+    margin: 0 1.25rem;
+    font-weight: 700;
+    font-size: 1rem;
+    font-family: inherit;
+    white-space: nowrap;
+    white-space-collapse: collapse;
+    transition: box-shadow 0.2s;
+
+    &:not(.p-tab-active):hover {
+      background: variables.$white;
+      border-color: variables.$gray-light;
+      color: variables.$gray;
     }
-  }
-  .p-tabview-nav-btn.p-link {
-    background: variables.$white;
-    color: colors.$main-color;
-    width: 3rem;
-    box-shadow:
-      0 3px 1px -2px rgba(0, 0, 0, 0.2),
-      0 2px 2px 0 rgba(0, 0, 0, 0.14),
-      0 1px 5px 0 rgba(0, 0, 0, 0.12);
-    border-radius: 0;
-  }
-  .p-tabview-panels {
-    padding: 0;
-    margin: 0;
-    border: 0 none;
+
+    &.p-tab-active {
+      background: variables.$white;
+      border-color: colors.$main-color;
+      color: colors.$main-color;
+    }
   }
 }
