DALA-5780: Adjusted for Dropdown and non sector behaviour

--- a/dataland-frontend/src/assets/scss/components/form.scss
+++ b/dataland-frontend/src/assets/scss/components/form.scss
@@ -398,6 +398,7 @@ input[type='radio'] {
       width: 1rem;
       height: 1rem;
       margin-top: -0.5rem;
+      left: 0;
       border-radius: 50%;
       transition-duration: 0.2s;
     }
