--- a/dataland-frontend/src/assets/scss/components/buttons.scss
+++ b/dataland-frontend/src/assets/scss/components/buttons.scss
@@ -18,7 +18,7 @@
   vertical-align: bottom;
   flex-direction: row;
   letter-spacing: 0.05em;
-  font-family: variables.$ibm-plex-sans;
+  font-family: inherit;
   transition: all 0.2s;
   border-radius: 0;
   text-transform: uppercase;
