--- a/dataland-frontend/src/assets/scss/components/dialog.scss
+++ b/dataland-frontend/src/assets/scss/components/dialog.scss
@@ -86,7 +86,7 @@
 }
 
 .p-popover {
-  background: variables.$white;
+  background: var(--default-neutral-white);
   border: 0 none;
   border-radius: 0;
   box-shadow: 0 0 3px 3px colors.$shadow-color;
