--- a/dataland-frontend/src/assets/scss/components/messages.scss
+++ b/dataland-frontend/src/assets/scss/components/messages.scss
@@ -19,12 +19,12 @@
   border-radius: 4px;
   border-width: 0 0 0 4px;
   &.p-message-light-error {
-    background: variables.$white;
+    background: var(--default-neutral-white);
     border: 1px solid colors.$message-error-border;
     color: colors.$main-text-color;
   }
   &.p-message-light-success {
-    background: variables.$white;
+    background: var(--default-neutral-white);
     border: 1px solid colors.$message-success-border;
     color: colors.$main-text-color;
   }
