--- a/dataland-frontend/src/assets/scss/variables.scss
+++ b/dataland-frontend/src/assets/scss/variables.scss
@@ -3,22 +3,19 @@
 =============================================*/
 
 /*=====  Colors  ======*/
-
 $orange-prime: #e67f3f;
 $orange-prime-dark: #cc7139;
 $blue-light: #a1c5d3;
-$blue-lighter: #dbf0f4;
 $aquamarine-dark: #013d48;
-$full-dark: #0b191f;
-$brown-dark: #1b1b1b;
-$brown: #292219;
-$brown-light: #5a4f36;
-$brown-lighter: #958d7c;
-$gray: #6c757d;
-$gray-light: #e0dfde;
-$gray-lighter: #f5f5f5;
-$paper-white: #f7f9fa;
-$white: #ffffff;
+$full-dark: #0b191f; //replace with aquamarine-dark
+$brown-dark: #1b1b1b;  //stone 900
+$brown: #292219; //stone 800
+$brown-light: #5a4f36; //stone 600
+$brown-lighter: #958d7c; // stone 400
+$gray: #6c757d; // gray 600
+$gray-light: #e0dfde; // gray 200
+$gray-lighter: #f5f5f5; // gray 100
+$paper-white: #f7f9fa; // neutral 50
 $red: #ee1a1a;
 $green: #4bb917;
 
@@ -36,51 +33,27 @@ $fs-lg: 1.125rem; // 18px
 $fs-xl: 1.5rem; // 24px
 $fs-xxl: 2rem; // 32px
 
-/* Heading font sizes */
-$h-1: 1.375rem; // 22px
-$h-2: 1.375rem; // 22px
-$h-3: 1.3125rem; // 21px
-$h-4: 1rem; // 16px
-$h-5: 0.75rem; // 12px
-$h-6: 0.75rem; // 12px
-
 /* line-height */
 $line-height-1: 1rem;
-$line-height-2: 1.25rem;
-$line-height-3: 1.5rem;
-$line-height-4: 2rem;
 
 /* Font weights */
-$fw-light: 300;
 $fw-normal: 400;
 $fw-medium: 500;
 $fw-semibold: 600;
 $fw-bold: 700;
-$fw-extrabold: 800;
-$fw-black: 900;
 
 /*=====  Spacing  ======*/
 
-$spacing-none: 0rem;
 $spacing-xxxs: 0.25rem; // 4px
 $spacing-xxs: 0.5rem; // 8px
 $spacing-xs: 0.75rem; // 12px
 $spacing-sm: 1rem; // 16px
 $spacing-md: 1.5rem; // 24px
-$spacing-lg: 2rem; // 32px
-$spacing-xl: 3rem; // 48px
-$spacing-xxl: 4rem; // 64px
-$spacing-xxxl: 6rem; // 96px
 
 /*=====  radius  ======*/
 
 $radius-none: 0rem;
 $radius-xxxs: 0.25rem; // 4px
 $radius-xxs: 0.5rem; // 8px
-$radius-xs: 0.75rem; // 12px
-$radius-sm: 1rem; // 16px
-$radius-md: 1.5rem; // 24px
 $radius-lg: 2rem; // 32px
-$radius-xl: 3rem; // 48px
 
-$shadows-base: 0px 4px 11px rgba(157, 157, 157, 0.2);
