Fixed styling of new modal.

--- a/dataland-frontend/src/assets/scss/components/searchbar.scss
+++ b/dataland-frontend/src/assets/scss/components/searchbar.scss
@@ -32,6 +32,13 @@
         color: colors.$input-text-color;
       }
     }
+
+    span {
+      max-width: 25rem;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
   }
   .p-multiselect-close {
     display: none;
