--- a/dataland-frontend/src/assets/theme/main.css
+++ b/dataland-frontend/src/assets/theme/main.css
@@ -1,22 +1,40 @@
 :root {
     --font-family: 'IBM Plex Sans', 'Helvetica Neue', Arial;
 
-     /* Formkit Style Override */
+    --font-size-xs: 0.75rem;
+    --font-size-sm: 0.875rem;
+    --font-size-base: 1rem;
+    --font-size-lg: 1.125rem;
+    --font-size-xl: 1.5rem;
+    --font-size-xxl: 2rem;
+
+    --font-weight-normal: 400;
+    --font-weight-medium: 500;
+    --font-weight-semibold: 600;
+    --font-weight-bold: 700;
+
+    /* Formkit Style Override */
     --fk-font-family: var(--font-family)
 }
 
 #app {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-align: center;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  margin: unset;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    text-align: center;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    margin: unset;
+}
+
+* {
+    box-sizing: border-box;
+    font-family: var(--font-family) sans-serif;
+    font-size: var(--font-size-base);
+    font-weight: var(--font-weight-normal);
 }
 
 body {
-  font-family: var(--font-family) sans-serif;
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
