Next part of removing the base.scss file

--- a/dataland-frontend/src/assets/scss/components/base.scss
+++ b/dataland-frontend/src/assets/scss/components/base.scss
@@ -224,10 +224,10 @@ ul.unstyled-ul-list {
   }
 }
 
-.next-to-each-other {
+/*.next-to-each-other {
   display: flex;
   gap: 1rem;
-}
+}*/
 
 .grid-2-form-cards {
   display: grid;
@@ -263,12 +263,12 @@ ul.unstyled-ul-list {
   }
 }
 
-.grid3 {
+/*.grid3 {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 10px;
-}
+}*/
 
-.display-contents {
+/*.display-contents {
   display: contents;
-}
+}*/
