Further work on base.scss

--- a/dataland-frontend/src/assets/scss/components/base.scss
+++ b/dataland-frontend/src/assets/scss/components/base.scss
@@ -190,30 +190,30 @@ body {
 
 // Home Page
 
-.middle-center-div {
+/*.middle-center-div {
   flex: 1;
   align-items: center;
   align-content: center;
   display: flex;
   justify-content: center;
   justify-items: center;
-}
+}*/
 
-.vertical-middle {
+/*.vertical-middle {
   display: flex;
   align-items: center;
-}
+}*/
 
-.p-disabled,
+/*.p-disabled,
 .p-component:disabled {
   opacity: 0.5;
-}
+}*/
 
-.d-cursor-pointer {
+/*.d-cursor-pointer {
   cursor: pointer;
-}
+}*/
 
-ul.unstyled-ul-list {
+/*ul.unstyled-ul-list {
   padding: 0;
   margin: 0;
 
@@ -222,7 +222,7 @@ ul.unstyled-ul-list {
     margin: 0;
     list-style: none;
   }
-}
+}*/
 
 /*.next-to-each-other {
   display: flex;
